# cat-ears

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: main.rs
